# miden-vm

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix
.config/: nextest.toml
air/: Cargo.toml
air/benches/: enforce_stack_constraint.rs
air/src/: errors.rs  lib.rs  options.rs  proof.rs  utils.rs
air/src/constraints/: mod.rs  range.rs
air/src/constraints/chiplets/: mod.rs
air/src/constraints/chiplets/bitwise/: tests.rs
air/src/constraints/chiplets/hasher/: tests.rs
air/src/constraints/stack/: mod.rs
air/src/trace/: main_trace.rs  mod.rs  rows.rs
air/src/trace/chiplets/: hasher.rs  memory.rs  mod.rs
air/src/trace/decoder/: mod.rs
air/src/trace/stack/: mod.rs
assembly-syntax/: Cargo.toml  README.md
assembly-syntax/src/: lib.rs  parse.rs
assembly-syntax/src/ast/: advice_map_entry.rs  block.rs  constants.rs  docstring.rs  form.rs  ident.rs  immediate.rs  imports.rs  invocation_target.rs  module.rs  op.rs  tests.rs  visit.rs
assembly-syntax/src/ast/attribute/: meta.rs  mod.rs
assembly-syntax/src/ast/instruction/: print.rs
assembly-syntax/src/ast/procedure/: alias.rs  mod.rs  name.rs  procedure.rs  resolver.rs
assembly-syntax/src/parser/: error.rs  grammar.lalrpop  lexer.rs  mod.rs  scanner.rs
assembly-syntax/src/sema/: context.rs  errors.rs  mod.rs
assembly-syntax/src/sema/passes/: const_eval.rs  verify_invoke.rs
assembly-syntax/src/testing/: context.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs  program.rs  sys_events.rs
core/src/advice/: map.rs
core/src/mast/: mod.rs  multi_forest_node_iterator.rs  tests.rs
core/src/mast/merger/: tests.rs
core/src/mast/node/: mod.rs
core/src/mast/serialization/: decorator.rs  tests.rs
core/src/operations/decorators/: assembly_op.rs
core/src/utils/: mod.rs
crates/debug/types/: Cargo.toml  README.md
crates/debug/types/src/: lib.rs  source_manager.rs  span.rs
crates/utils/diagnostics/: Cargo.toml  README.md
crates/utils/diagnostics/src/: lib.rs  related.rs
crates/utils/sync/: Cargo.toml  README.md
crates/utils/sync/src/: lib.rs  rw_lock.rs
crates/utils/testing/: Cargo.toml
crates/utils/testing/src/: crypto.rs  host.rs  lib.rs  rand.rs  test_builders.rs
miden-vm/: Cargo.toml  README.md
miden-vm/benches/: deserialize_std_lib.rs  program_execution.rs  program_execution_fast.rs
miden-vm/src/: internal.rs  lib.rs  main.rs  utils.rs
miden-vm/src/cli/: bundle.rs  compile.rs  data.rs  prove.rs  repl.rs  run.rs  utils.rs  verify.rs
miden-vm/src/cli/debug/: command.rs  executor.rs  mod.rs
miden-vm/src/repl/: mod.rs
miden-vm/src/tools/: mod.rs
miden-vm/tests/integration/: exec.rs  exec_iters.rs  main.rs
miden-vm/tests/integration/air/: range.rs
miden-vm/tests/integration/cli/: cli_test.rs
miden-vm/tests/integration/flow_control/: mod.rs
miden-vm/tests/integration/operations/: crypto_ops.rs  ext2_ops.rs  field_ops.rs  fri_ops.rs  stack_ops.rs  sys_ops.rs
package/: Cargo.toml
package/src/dependency/: mod.rs
processor/: Cargo.toml
processor/src/: continuation_stack.rs  debug.rs  errors.rs  lib.rs  tests.rs  utils.rs
processor/src/chiplets/: mod.rs  tests.rs
processor/src/chiplets/ace/: instruction.rs  mod.rs  trace.rs
processor/src/chiplets/aux_trace/: mod.rs  wiring_bus.rs
processor/src/chiplets/bitwise/: tests.rs
processor/src/chiplets/hasher/: tests.rs  trace.rs
processor/src/chiplets/kernel_rom/: tests.rs
processor/src/chiplets/memory/: errors.rs  mod.rs  segment.rs  tests.rs
processor/src/decoder/: block_stack.rs  mod.rs  tests.rs  trace.rs
processor/src/decoder/aux_trace/: block_hash_table.rs  block_stack_table.rs  mod.rs  op_group_table.rs
processor/src/fast/: circuit_eval.rs  crypto_ops.rs  field_ops.rs  fri_ops.rs  horner_ops.rs  memory.rs  mod.rs  stack_ops.rs  sys_ops.rs  u32_ops.rs
processor/src/fast/tests/: advice_provider.rs  masm_consistency.rs  mod.rs
processor/src/gkr/: mod.rs
processor/src/gkr/circuit/: mod.rs  prover.rs  test.rs  verifier.rs
processor/src/gkr/multivariate/: lagrange_ker.rs  mod.rs
processor/src/gkr/sumcheck/: mod.rs  prover.rs  verifier.rs
processor/src/gkr/utils/: mod.rs
processor/src/host/: debug.rs  default.rs  handlers.rs  mast_forest_store.rs  mod.rs
processor/src/host/advice/: errors.rs  inputs.rs  mod.rs
processor/src/operations/: crypto_ops.rs  ext2_ops.rs  field_ops.rs  fri_ops.rs  horner_ops.rs  io_ops.rs  mod.rs  stack_ops.rs  u32_ops.rs
processor/src/operations/sys_ops/: mod.rs  sys_event_handlers.rs
processor/src/range/: aux_trace.rs  tests.rs
processor/src/stack/: aux_trace.rs  mod.rs  tests.rs  trace.rs
processor/src/system/: tests.rs
processor/src/trace/: mod.rs  utils.rs
processor/src/trace/tests/: decoder.rs  hasher.rs  mod.rs  range.rs
processor/src/trace/virtual_bus/: mod.rs
prover/: Cargo.toml
prover/benches/: constraints.rs  current bench.txt  trace_commit.rs
prover/src/: lib.rs
prover/src/gpu/: mod.rs
prover/src/gpu/cuda/: bench.rs  mod.rs  tests.rs  tmp
prover/src/gpu/metal/: mod.rs  tests.rs
stdlib/: Cargo.toml  build.rs
stdlib/asm/: word.masm
stdlib/asm/collections/: smt.masm
stdlib/asm/crypto/dsa/: rpo_falcon512.masm
stdlib/asm/crypto/hashes/: rpo.masm
stdlib/asm/crypto/stark/: constants.masm  public_inputs.masm  utils.masm
stdlib/benches/: compilation.rs
stdlib/docs/crypto/dsa/: rpo_falcon512.md
stdlib/docs/crypto/hashes/: rpo.md
stdlib/src/: lib.rs
stdlib/tests/: main.rs  mast_forest_merge.rs
stdlib/tests/collections/: mmr.rs  mod.rs  smt.rs
stdlib/tests/crypto/: arithmetic_circuit_eval.rs  blake3.rs  ecdsa_secp256k1.rs  elgamal.rs  falcon.rs  keccak256.rs  rpo.rs  sha256.rs
stdlib/tests/crypto/fri/: channel.rs  mod.rs  verifier_fri_e2f4.rs
stdlib/tests/crypto/stark/: mod.rs
stdlib/tests/math/: u256_mod.rs  u64_mod.rs
stdlib/tests/math/ecgfp5/: base_field.rs  group.rs  scalar_field.rs
stdlib/tests/math/secp256k1/: base_field.rs  group.rs  scalar_field.rs
stdlib/tests/mem/: mod.rs
stdlib/tests/sys/: mod.rs
stdlib/tests/word/: mod.rs
verifier/: Cargo.toml
verifier/src/: lib.rs
(+80 files in other folders)
