[workspace]
members = [
    "air",
    "assembly",
    "core",
    "miden",
    "processor",
    "prover",
    "stdlib",
    "test-utils",
    "verifier",
]
resolver = "2"

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[patch.crates-io]
thiserror = { git = "https://github.com/bitwalker/thiserror", branch = "no-std" }
miette = { git = "https://github.com/bitwalker/miette", branch = "no-std" }
winter-math = { package = "winter-math", git = "https://github.com/TheMenko/winterfell", branch = "ver8.3" }
winter-prover = { package = "winter-prover", git = "https://github.com/TheMenko/winterfell", branch = "ver8.3" }
