[package]
name = "miden-air"
version = "0.17.0"
description = "Algebraic intermediate representation of Miden VM processor"
documentation = "https://docs.rs/miden-air/0.17.0"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["air", "arithmetization", "crypto", "miden"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[[bench]]
name = "compute_op_flags"
harness = false

[[bench]]
name = "enforce_stack_constraint"
harness = false

[features]
default = ["std"]
std = ["miden-core/std", "winter-air/std", "thiserror/std"]
testing = []

[dependencies]
thiserror.workspace = true
miden-core.workspace = true
winter-air.workspace = true
winter-prover.workspace = true

[dev-dependencies]
criterion = "0.6"
proptest.workspace = true
winter-rand-utils.workspace = true
