[package]
name = "miden-assembly-syntax"
version = "0.17.0"
description = "Parsing and semantic analysis of the Miden Assembly language"
documentation = "https://docs.rs/miden-assembly-syntax/0.17.0"
readme = "README.md"
categories = ["compilers", "no-std"]
keywords = ["assembly", "language", "syntax", "miden"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[features]
default = ["std"]
std = [
    "aho-corasick/std",
    "miden-core/std",
    "miden-debug-types/std",
    "miden-utils-diagnostics/std",
    "thiserror/std",
]
serde = ["miden-debug-types/serde", "semver/serde"]
arbitrary = ["dep:proptest", "dep:proptest-derive"]
testing = ["arbitrary", "logging"]
logging = ["dep:env_logger"]

[dependencies]
aho-corasick = { version = "1.1", default-features = false }
env_logger = { version = "0.11", optional = true }
lalrpop-util = { version = "0.22", default-features = false }
log.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
regex = { version = "1.10", default-features = false, features = ["unicode", "perf"] }
semver = { version = "1.0", default-features = false }
smallvec.workspace = true
thiserror.workspace = true

[dev-dependencies]
env_logger = "0.11"
proptest.workspace = true
pretty_assertions = "1.4"

[build-dependencies]
lalrpop = { version = "0.22", default-features = false }
rustc_version = "0.4"
