[package]
name = "miden-core"
version = "0.17.0"
description = "Miden VM core components"
documentation = "https://docs.rs/miden-core/0.17.0"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["instruction-set", "miden", "program"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = [
    "miden-crypto/std",
    "miden-debug-types/std",
    "miden-formatting/std",
    "thiserror/std",
    "winter-math/std",
    "winter-utils/std",
]
serde = ["miden-crypto/serde", "miden-debug-types/serde", "winter-math/serde"]

[dependencies]
miden-crypto.workspace = true
miden-debug-types.workspace = true
miden-formatting.workspace = true
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
thiserror.workspace = true
winter-math.workspace = true
winter-utils.workspace = true

[dev-dependencies]
proptest.workspace = true
winter-rand-utils.workspace = true
