[package]
name = "miden-processor"
version = "0.17.0"
description = "Miden VM processor"
documentation = "https://docs.rs/miden-processor/0.17.0"
readme = "README.md"
categories = ["emulators", "no-std"]
keywords = ["miden", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
concurrent = ["std", "winter-prover/concurrent"]
default = ["std"]
std = [
    "miden-core/std",
    "miden-debug-types/std",
    "miden-utils-diagnostics/std",
    "winter-prover/std",
    "thiserror/std",
]
testing = ["miden-air/testing", "tokio"]
# Removes proper error context from the error messages. Enable in production builds that need
# maximal performance.
no_err_ctx = []
# Like `testing`, but slows down the processor speed to make it easier to debug.
bus-debugger = ["testing", "miden-air/testing"]

[dependencies]
miden-air.workspace = true
miden-core.workspace = true
miden-debug-types.workspace = true
miden-utils-diagnostics.workspace = true
tracing.workspace = true
thiserror.workspace = true
# For `testing`
tokio = { version = "1.46", default-features = false, features = ["rt"], optional = true }
winter-prover.workspace = true

[dev-dependencies]
miden-assembly.workspace = true
miden-utils-testing.workspace = true
logtest = { version = "2.0", default-features = false }
pretty_assertions = "1.4"
rstest = { version = "0.25" }
tokio = { version = "1.46", default-features = false, features = ["rt"] }
winter-fri.workspace = true
winter-utils.workspace = true
