[package]
name = "miden-prover"
version = "0.8.0"
description = "Miden VM prover"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-vm"
documentation = "https://docs.rs/miden-prover/0.8.0"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
edition = "2021"
rust-version = "1.75"

[[bench]]
name = "build_constraints"
path = "benches/constraints.rs"
harness = false

[[bench]]
name = "build_traces"
path = "benches/trace_commit.rs"
harness = false

[features]
concurrent = ["processor/concurrent", "std", "winter-prover/concurrent"]
default = ["std"]
metal = ["dep:miden-gpu", "dep:elsa", "dep:pollster", "concurrent", "std"]
cuda = ["dep:miden-gpu", "std", "dep:allocator-api2"]
std = ["air/std", "processor/std", "winter-prover/std"]

[dependencies]
air = { package = "miden-air", path = "../air", version = "0.8", default-features = false }
allocator-api2 = { version = "0.2", optional = true }
processor = { package = "miden-processor", path = "../processor", version = "0.8", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }
winter-prover = { package = "winter-prover", version = "0.9", default-features = false }
winter-air = { package = "winter-air", version = "0.9", default-features = false }
miden-gpu = { version = "0.2", path = "../../miden-gpu", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
elsa = { version = "1.9", optional = true }
pollster = { version = "0.3", optional = true }