[package]
name = "miden-prover"
version = "0.17.0"
description = "Miden VM prover"
documentation = "https://docs.rs/miden-prover/0.17.0"
readme = "README.md"
categories = ["cryptography", "emulators", "no-std"]
keywords = ["miden", "prover", "stark", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
async = ["winter-maybe-async/async"]
concurrent = ["std", "miden-processor/concurrent", "winter-prover/concurrent"]
metal = ["dep:miden-gpu", "dep:elsa", "dep:pollster", "concurrent", "std"]
std = ["miden-air/std", "miden-debug-types/std", "miden-processor/std", "winter-prover/std"]

[dependencies]
miden-air.workspace = true
miden-debug-types.workspace = true
miden-processor.workspace = true
tracing.workspace = true
winter-maybe-async = { version = "0.13", default-features = false }
winter-prover.workspace = true

[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
elsa = { version = "1.9", optional = true }
miden-gpu = { version = "0.6", optional = true }
pollster = { version = "0.4", optional = true }
