[package]
name = "miden-stdlib"
version = "0.17.0"
description = "Miden VM standard library"
documentation = "https://docs.rs/miden-stdlib/0.17.0"
readme = "README.md"
categories = ["cryptography", "mathematics"]
keywords = ["miden", "program", "stdlib"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[[bench]]
name = "compilation"
harness = false

[[test]]
name = "stdlib"
path = "tests/main.rs"

[features]
default = ["std"]
std = ["miden-assembly/std", "miden-utils-sync/std"]
with-debug-info = []

[dependencies]
miden-assembly.workspace = true
miden-core.workspace = true
miden-processor.workspace = true
miden-utils-sync.workspace = true
thiserror.workspace = true

[dev-dependencies]
blake3 = "1.8"
criterion = "0.6"
miden-air.workspace = true
miden-processor = { workspace = true, features = ["testing"] }
miden-utils-testing.workspace = true
num = "0.4"
num-bigint = "0.4"
pretty_assertions = "1.4"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
rstest = "0.25"
serde_json.workspace = true
sha2 = "0.10"
sha3 = "0.10"
winter-air.workspace = true
winter-fri.workspace = true

[build-dependencies]
env_logger = "0.11"
miden-assembly = { workspace = true, features = ["std"] }
