[package]
name = "miden-verifier"
version = "0.17.0"
description = "Miden VM execution verifier"
documentation = "https://docs.rs/miden-verifier/0.17.0"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["miden", "stark", "verifier", "zkp"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
bench = false
doctest = false

[features]
default = ["std"]
std = ["miden-air/std", "miden-core/std", "thiserror/std", "winter-verifier/std"]

[dependencies]
miden-air.workspace = true
miden-core.workspace = true
tracing.workspace = true
thiserror.workspace = true
winter-verifier.workspace = true
