[package]
name = "miden-utils-sync"
version = "0.17.0"
description = "no-std compatible locking primitives for the Miden project"
documentation = "https://docs.rs/miden-utils-sync/0.17.0"
readme = "README.md"
categories = ["no-std"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[features]
default = ["std"]
std = ["dep:parking_lot"]

[dependencies]
lock_api = { version = "0.4", features = ["arc_lock"] }
parking_lot = { version = "0.12", optional = true }

[dev-dependencies]
loom = "0.7"
proptest.workspace = true

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
