[package]
name = "miden-test-utils"
version = "0.1.0"
description = "Test utilities for Miden VM programs"
readme = "README.md"
categories = ["development-tools::testing", "no-std"]
keywords = ["miden", "test", "virtual-machine"]
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
    "miden-assembly/std",
    "miden-core/std",
    "miden-processor/std",
    "miden-prover/std",
    "miden-verifier/std",
    "winter-prover/std",
]

[dependencies]
miden-air.workspace = true
miden-assembly = { workspace = true, features = ["testing"] }
miden-core.workspace = true
miden-processor = { workspace = true, features = ["testing"] }
miden-prover.workspace = true
miden-stdlib.workspace = true
miden-verifier.workspace = true
test-case = "3.2"
winter-prover.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
pretty_assertions = { version = "1.4", default-features = false, features = [
    "alloc",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pretty_assertions = "1.4"
proptest.workspace = true
winter-rand-utils.workspace = true
